Fixed some errors regarding the horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,25 @@
 }
 
 body {
-  background: #282c34;
-  overflow-x: hidden;
+  background: #BC3939;
+  overflow: hidden; /* Prevent default scrolling */
   font-family: "PT Sans", sans-serif;
   font-size: large;
   font-weight: 600;
+}
+
+/* App Container */
+.app-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 /* Navbar Styles */
 #Navbar {
   background-color: #121517;
   width: 100%;
-  max-height: 10vh;
+  height: 10vh; /* Fixed height for navbar */
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -89,20 +96,25 @@ body {
   display: flex;
   transition: transform 0.5s ease-in-out;
   width: 500%; /* 5 pages * 100% */
-  height: 100vh;
+  flex-grow: 1;
+  overflow: hidden; /* Prevent horizontal scrollbars */
 }
 
 .page {
   width: 100%;
-  height: 100vh;
-  overflow-y: auto;
-  padding: 0;
+  overflow-y: scroll; /* Enable vertical scrolling within each page */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;     /* Firefox */
+}
+
+.page::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
 }
 
 /* Page Content Styles */
 .App {
   padding: 0;
- 
+  width: 60vw;
   min-width: 500px;
   margin: auto;
   align-content: center;
